# template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  copier.yml  pyproject.toml
cli/{{project_name}}/{{project_name}}/{{project_name}}/: __init__.py.jinja  __main__.py.jinja
fastapi/{{project_name}}/{{project_name}}/: __init__.py.jinja
src/templatipy/: __init__.py  __main__.py  cli.py  config.py
{{project_name}}/{{project_name}}/: __init__.py.jinja
