[project]
name = "templatipy"
version = "0.1.0"
description = "A python module to create a template for building efficient python application"
authors = [
    { name = "TianaNanta", email = "andrianjakananta@gmail.com" }
]
dependencies = [
    "typer[all]>=0.12.3",
    "copier>=9.2.0",
    "pydantic-settings>=2.2.1",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[project.scripts]
"templatipy" = "templatipy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.5",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
split_on_trailing_comma = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/templatipy"]
